--- a/Public/Landing_Page.html
+++ b/Public/Landing_Page.html
@@ -48,7 +48,7 @@ body { font-family: 'Inter', sans-serif; }
     </ul>
   </div>
   <div class="flex justify-center">
-    <img src="Prototype.html/assets/momentumailogo.png"
+    <img src="assets/momentumailogo.png"
          alt="MomentumScout Logo"
          class="rounded-xl shadow-lg border border-gray-600"
          style="width:300px;height:300px;object-fit:contain;">
@@ -60,13 +60,13 @@ body { font-family: 'Inter', sans-serif; }
   <div class="carousel rounded-xl shadow-lg border border-gray-600 relative max-w-3xl mx-auto">
     <div class="carousel-track">
       <div class="carousel-slide">
-        <img src="Prototype.html/assets/screenshot1.png" alt="Screenshot 1" class="w-full h-64 object-contain rounded-xl">
+        <img src="assets/screenshot1.png" alt="Screenshot 1" class="w-full h-64 object-contain rounded-xl">
       </div>
       <div class="carousel-slide">
-        <img src="Prototype.html/assets/screenshot2.png" alt="Screenshot 2" class="w-full h-64 object-contain rounded-xl">
+        <img src="assets/screenshot2.png" alt="Screenshot 2" class="w-full h-64 object-contain rounded-xl">
       </div>
       <div class="carousel-slide">
-        <img src="Prototype.html/assets/screenshot3.png" alt="Screenshot 3" class="w-full h-64 object-contain rounded-xl">
+        <img src="assets/screenshot3.png" alt="Screenshot 3" class="w-full h-64 object-contain rounded-xl">
       </div>
     </div>
     <button class="carousel-button prev">&lt;</button>
@@ -80,10 +80,9 @@ body { font-family: 'Inter', sans-serif; }
     Watch a quick explainer video to understand how our AI scouting works and how it can save your club or agency hours of work.
   </p>
   <video controls class="mx-auto rounded-xl shadow-lg border border-gray-600 max-w-full">
-    <source src="Prototype.html/assets/JC4OKHL3O1AA1SZG.mp4" type="video/mp4">
+    <source src="assets/MomentumScoutAIDemo.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-</section>
 
 <section id="signup" class="container mx-auto px-6 py-16 bg-gray-800 rounded-xl shadow-lg border border-gray-600">
   <h2 class="text-3xl font-bold text-green-400 mb-6 text-center">Request Demo Access</h2>
