--- a/Public/index.html
+++ b/Public/index.html
@@ -159,7 +159,7 @@ demoForm.addEventListener('submit', async (e) => {
   try {
     // CRITICAL FIX: Sending form data to your Python proxy endpoint
     const response = await fetch(
-      'https://802eb468d1e1.ngrok-free.app/api/submit_demo', // <--- This URL hits your Python backend
+      'https://momentumai-backend-g1ov.onrender.com/api/submit_demo', // <--- This URL hits your Python backend
       {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
