Fix asset paths and demo form fetch

--- a/Landing_Page.html
+++ b/Landing_Page.html
@@ -48,7 +48,7 @@ body { font-family: 'Inter', sans-serif; }
     </ul>
   </div>
   <div class="flex justify-center">
-    <img src="Prototype.html/assets/momentumailogo.png"
+    <img src="assets/momentumailogo.png"
          alt="MomentumScout Logo"
          class="rounded-xl shadow-lg border border-gray-600"
          style="width:300px;height:300px;object-fit:contain;">
@@ -60,13 +60,13 @@ body { font-family: 'Inter', sans-serif; }
   <div class="carousel rounded-xl shadow-lg border border-gray-600 relative max-w-3xl mx-auto">
     <div class="carousel-track">
       <div class="carousel-slide">
-        <img src="Public/assets/screenshot1.png" alt="Screenshot 1" class="w-full h-64 object-contain rounded-xl">
+        <img src="assets/screenshot1.png" alt="Screenshot 1" class="w-full h-64 object-contain rounded-xl">
       </div>
       <div class="carousel-slide">
-        <img src="Public/assets/screenshot2.png" alt="Screenshot 2" class="w-full h-64 object-contain rounded-xl">
+        <img src="assets/screenshot2.png" alt="Screenshot 2" class="w-full h-64 object-contain rounded-xl">
       </div>
       <div class="carousel-slide">
-        <img src="Public/assets/screenshot3.png" alt="Screenshot 3" class="w-full h-64 object-contain rounded-xl">
+        <img src="assets/screenshot3.png" alt="Screenshot 3" class="w-full h-64 object-contain rounded-xl">
       </div>
     </div>
     <button class="carousel-button prev">&lt;</button>
@@ -80,7 +80,7 @@ body { font-family: 'Inter', sans-serif; }
     Watch a quick explainer video to understand how our AI scouting works and how it can save your club or agency hours of work.
   </p>
   <video controls class="mx-auto rounded-xl shadow-lg border border-gray-600 max-w-full">
-    <source src="Public/assets/MomentumScoutAIDemo.mp4" type="video/mp4">
+    <source src="assets/MomentumScoutAIDemo.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </section>
@@ -150,12 +150,13 @@ demoForm.addEventListener('submit', async (e) => {
 
   try {
     const response = await fetch(
-  'https://momentumai-backend-g1ov.onrender.com/api/submit_demo',
- {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(data)
-    });
+      'https://momentumai-backend-g1ov.onrender.com/api/submit_demo', // <-- LIVE backend URL
+      {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      }
+    );
 
     if (!response.ok) throw new Error('Network response was not ok');
 
@@ -164,7 +165,7 @@ demoForm.addEventListener('submit', async (e) => {
         formMessage.classList.remove('hidden');
         formMessage.innerHTML = `
           ✅ Thank you, ${data.fullName}!<br>
-          Your demo dashboard is ready: <a href="${result.dashboard_link}" target="_blank" class="underline font-bold">Click here to access</a>
+          Your demo dashboard is ready: <a href="${result.dashboard_link || '#'}" target="_blank" class="underline font-bold">Click here to access</a>
         `;
         demoForm.reset();
     } else {
