--- a/Public/Landing_Page.html
+++ b/Public/Landing_Page.html
@@ -60,13 +60,13 @@ body { font-family: 'Inter', sans-serif; }
   <div class="carousel rounded-xl shadow-lg border border-gray-600 relative max-w-3xl mx-auto">
     <div class="carousel-track">
       <div class="carousel-slide">
-        <img src="Public/assets/screenshot1.png" alt="Screenshot 1" class="w-full h-64 object-contain rounded-xl">
+        <img src="assets/screenshot1.png" alt="Screenshot 1" class="w-full h-64 object-contain rounded-xl">
       </div>
       <div class="carousel-slide">
-        <img src="Public/assets/screenshot2.png" alt="Screenshot 2" class="w-full h-64 object-contain rounded-xl">
+        <img src="assets/screenshot2.png" alt="Screenshot 2" class="w-full h-64 object-contain rounded-xl">
       </div>
       <div class="carousel-slide">
-        <img src="Public/assets/screenshot3.png" alt="Screenshot 3" class="w-full h-64 object-contain rounded-xl">
+        <img src="assets/screenshot3.png" alt="Screenshot 3" class="w-full h-64 object-contain rounded-xl">
       </div>
     </div>
     <button class="carousel-button prev">&lt;</button>
@@ -83,6 +83,7 @@ body { font-family: 'Inter', sans-serif; }
     <source src="assets/MomentumScoutAIDemo.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+</section>
 
 <section id="signup" class="container mx-auto px-6 py-16 bg-gray-800 rounded-xl shadow-lg border border-gray-600">
   <h2 class="text-3xl font-bold text-green-400 mb-6 text-center">Request Demo Access</h2>
@@ -140,7 +141,6 @@ const formMessage = document.getElementById('formMessage');
 
 demoForm.addEventListener('submit', async (e) => {
   e.preventDefault();
-  
   const data = {
     fullName: demoForm.fullName.value,
     email: demoForm.email.value,
@@ -150,7 +150,7 @@ demoForm.addEventListener('submit', async (e) => {
 
   try {
     const response = await fetch(
-      'https://momentumai-backend-g1ov.onrender.com/api/submit_demo',
+      'https://momentumai-backend-g1ov.onrender.com/api/submit_demo', // <-- LIVE backend URL
       {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
@@ -161,16 +161,15 @@ demoForm.addEventListener('submit', async (e) => {
     if (!response.ok) throw new Error('Network response was not ok');
 
     const result = await response.json();
-    
     if (result.success) {
-      formMessage.classList.remove('hidden');
-      formMessage.innerHTML = `
-        ✅ Thank you, ${data.fullName}!<br>
-        Your demo dashboard is ready: <a href="${result.dashboard_link}" target="_blank" class="underline font-bold">Click here to access</a>
-      `;
-      demoForm.reset();
+        formMessage.classList.remove('hidden');
+        formMessage.innerHTML = `
+          ✅ Thank you, ${data.fullName}!<br>
+          Your demo dashboard is ready: <a href="${result.dashboard_link || '#'}" target="_blank" class="underline font-bold">Click here to access</a>
+        `;
+        demoForm.reset();
     } else {
-      throw new Error(result.message || 'Error submitting form.');
+        throw new Error(result.message || 'Error submitting form.');
     }
 
   } catch (error) {
@@ -178,3 +177,6 @@ demoForm.addEventListener('submit', async (e) => {
     alert("There was an error submitting the form. Please try again.");
   }
 });
+</script>
+</body>
+</html>
