Fix asset paths for Render deployment

--- a/Public/index.html
+++ b/Public/index.html
@@ -80,7 +80,7 @@ body { font-family: 'Inter', sans-serif; }
     Watch a quick explainer video to understand how our AI scouting works and how it can save your club or agency hours of work.
   </p>
   <video controls class="mx-auto rounded-xl shadow-lg border border-gray-600 max-w-full">
-    <source src="assets/JC4OKHL3O1AA1SZG.mp4" type="video/mp4">
+    <source src="assets/MomentumScoutAIDemo.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </section>
