Added dashboard redirect and dashboard.html page

--- a/Public/Landing_Page.html
+++ b/Public/Landing_Page.html
@@ -159,7 +159,12 @@ demoForm.addEventListener('submit', async (e) => {
       }
     );
 
-    if (!response.ok) throw new Error('Network response was not ok');
+    if (response.ok) {
+  window.location.href = '/dashboard.html';
+} else {
+  alert('There was an issue submitting your form. Please try again.');
+}
+
 
     const result = await response.json();
     if (result.success) {
