--- a/Public/dashboard.html
+++ b/Public/dashboard.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MomentumScout Player Dashboard</title>
+    <body class="bg-gray-900 text-white">
     <script src="https://cdn.tailwindcss.com"></script>
+    <body class="bg-gray-900 text-white">
+        <!-- Dashboard Welcome Section -->
+        <section class="flex flex-col items-center justify-center min-h-screen text-center px-4">
+          <h1 class="text-3xl md:text-4xl font-bold mb-4 text-green-400">
+            Welcome to MomentumScout Dashboard
+          </h1>
+          <p class="mb-6 text-lg text-gray-300 max-w-lg">
+            Thank you for registering! We’re reviewing your details. Once verified, you’ll gain access to advanced player insights and scouting tools.
+          </p>
+          <a href="index.html" class="px-6 py-3 bg-green-500 rounded-full font-semibold text-gray-900 hover:bg-green-400 transition">
+            Return to Home
+          </a>
+        </section>
+      </body>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
