--- a/Public/index.html
+++ b/Public/index.html
@@ -144,6 +144,7 @@ prevBtn.addEventListener('click', () => {
 });
 
 /* ---------- Demo Form Submission ---------- */
+/* ---------- Demo Form Submission ---------- */
 const demoForm = document.getElementById('demoForm');
 const formMessage = document.getElementById('formMessage');
 
@@ -157,9 +158,8 @@ demoForm.addEventListener('submit', async (e) => {
   };
 
   try {
-    // CRITICAL FIX: Sending form data to your Python proxy endpoint
     const response = await fetch(
-      'https://momentumai-backend-g1ov.onrender.com/api/submit_demo', // <--- This URL hits your Python backend
+      'https://momentumai-backend-g1ov.onrender.com/api/submit_demo',
       {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
@@ -167,27 +167,25 @@ demoForm.addEventListener('submit', async (e) => {
       }
     );
 
-    if (!response.ok) {
-        // This catches 500 errors from Python or other network issues
-        throw new Error('Network response was not ok');
-    }
-    
-    // Check if the JSON result from the Python proxy indicates success
+    if (!response.ok) throw new Error('Network response was not ok');
+
     const result = await response.json();
+
     if (result.success) {
-        console.log("Submission result:", result);
-        formMessage.classList.remove('hidden');
-        demoForm.reset();
+      console.log("Submission result:", result);
+
+      // ✅ Redirect user to dashboard on success
+      window.location.href = 'dashboard.html';
     } else {
-        // Handles internal errors from the Python proxy
-        throw new Error(result.message || 'Error submitting form via proxy.');
+      throw new Error(result.message || 'Error submitting form via proxy.');
     }
 
   } catch (error) {
     console.error("Error submitting form:", error);
-    alert("There was an error submitting the form. Please try again. Check your Python script terminal for details.");
+    alert("There was an error submitting the form. Please try again.");
   }
 });
+
 </script>
 </body>
 </html>
